@@ -1,0 +1,2 @@
+#define XCC icc
+#include <sparc64/memmove.S>
