@@ -1,0 +1,1 @@
+#include <sparc64/rtld-memmove.c>
