@@ -1,0 +1,2 @@
+#include <string/wordcopy.c>
+#include <string/memmove.c>
